<resources>
    <string name="app_name">WeatherForecast</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appName">Прогноз погоды</string>
    <string name="tempText">Температура:</string>
    <string name="dataText">Дата:</string>
    <string name="cityText">"Город: "</string>
    <string name="resultCityTV" />
    <string name="resultDataTV" />
    <string name="resultTempTV" />
    <string name="nameCity">Введите город</string>
    <string name="nameTemperature">Текущая темперетура :</string>
    <string name="nameResult">Результат</string>
    <string name="nameWhether">Узнать погоду</string>
    <string name="nameSaveCity">Сохранить город</string>
    <string name="nameMyCity">Мои города</string>
    <string name="saveBTNinDetail">Сохранить новые данные</string>
    <string name="searchWeatherBTN">Узнать погоду</string>
    <string name="tempTVinDetail">Текущая температура</string>
    <string name="updateDateTVinDetail">Поседнее обновление: </string>
    <string name="Delete">Del</string>
    <string name="weather">TextView</string>
    <string name="infoButtonText">Info</string>
    <string name="setting_menu">Настройка</string>
</resources>